 * @forwardlist can be inherited (But defaults to no-inherit). Suggested
   by Padraic.
 * @pemit/port now takes the /list switch, to pemit multiple ports at once.
   Suggested by Padraic. [MG]
 * When you 'register' a character at the connect screen, you can re-use the
   command to send a new password to the same email address, as long as you
   haven't connected yet. Suggested by Minion. [MG]

Functions:
 * valid() can be used with the 'qreg' category to check if a string
   is a valid q-register name.  [SW]
 * crecall() now returns an error when given an invalid channel, and no
   longer returns an error when used on a channel with nothing to recall.
   Suggested by Trinsec. [MG]
 * Added uptime(), which returns much of the information from @uptime.
   From a suggestion by Jules. [MG]
   
Fixes:
 * Wildcard matches on ANSI'd strings sometimes failed. Reported by Duckwa
   and Paige. [MG]
 * Bug in matching code when a room tries to locate an exit. Reported by
   Sketch. [MG]
 * Help updates. [MG], [SW]
 * Crash bug in dealing with Pueblo markup. Reported by Mercutio. [SW]
 * Fix some issues in parsing flag/attribute/eval locks. Found by Padraic
   and Jules. [SW]
 * @[out]pageformat could sometimes receive the wrong alias in %2. Reported
   by Padraic. [MG]
 * align() didn't correctly apply ANSI to empty columns. Reported by
   Padraic. [MG]

Version 1.8.4 patchlevel 5                                 Jun 19,  2011

Major Changes:

 * The experimental --enable-ssl_slave option for configure allows
   persistant SSL connections that won't get booted when the mush
   restarts. Requires libevent v2.X. [SW]
 * info_slave, the sub-process used for resolving hostnames, now uses
   libevent if available. [SW]
 * Rewrite of large portions of notify.c. The main public function
   there, notify_anything(), now takes different arguments.
   notify_format() and notify() are unchanged. Should be largely
   unnoticable for players. [MG]

Commands: